# AutoDev-Group-Project-2

./: .env.example  .gitignore  PLANNING-DOCUMENT.md  README.md  mcp_servers.json.example  pyproject.toml  requirements.txt
.autodev_vectorstore/: chroma.sqlite3
autodev/: __init__.py  agent.py  config.py  ingest_docs.py  main.py  rag_server.py  smoke_test.py  tools.py
autodev/cli/: repl.py
autodev/mcp/: client.py
autodev/providers/: factory.py
autodev_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: autodev_notes.txt
