[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autodev-cli"
version = "0.1.0"
description = "AutoDev autonomous coding assistant CLI"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "rich",
    "typer",
    "langchain",
    "langchain-core",
    "langchain-ollama",
    "langchain-groq",
    "langchain-community",
    "langchain-experimental",
    "langchain-chroma",
    "sentence-transformers",
    "mcp",
    "tavily-python",
]

[tool.setuptools.packages.find]
include = ["autodev*"]

[project.scripts]
autodev = "autodev.main:cli_main"
